// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Google renders correctly 1`] = `
<div
  className="google-picker "
  style={
    {
      "background": "#fff",
      "border": "1px solid #dfe1e5",
      "borderRadius": "8px 8px 0px 0px",
      "boxSizing": "initial",
      "display": "flex",
      "flexWrap": "wrap",
      "width": 652,
    }
  }
>
  <div
    style={
      {
        "boxSizing": "border-box",
        "fontFamily": "Roboto-Regular,HelveticaNeue,Arial,sans-serif",
        "fontSize": "20px",
        "height": "57px",
        "paddingBottom": "16px",
        "paddingLeft": "16px",
        "paddingTop": "16px",
        "width": "100%",
      }
    }
  >
    Color picker
  </div>
  <div
    style={
      {
        "background": "rgba(34, 25, 77, 1)",
        "height": "228px",
        "overflow": "hidden",
        "padding": "0px",
        "position": "relative",
        "width": "30%",
      }
    }
  />
  <div
    style={
      {
        "overflow": "hidden",
        "padding": "0px",
        "position": "relative",
        "width": "70%",
      }
    }
  >
    <div
      onMouseDown={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        {
          "background": "hsl(249.99999999999994,100%, 50%)",
          "borderRadius": undefined,
          "inset": "0px",
          "position": "absolute",
        }
      }
    >
      <style>
        
          .saturation-white {
            background: -webkit-linear-gradient(to right, #fff, rgba(255,255,255,0));
            background: linear-gradient(to right, #fff, rgba(255,255,255,0));
          }
          .saturation-black {
            background: -webkit-linear-gradient(to top, #000, rgba(0,0,0,0));
            background: linear-gradient(to top, #000, rgba(0,0,0,0));
          }
        
      </style>
      <div
        className="saturation-white"
        style={
          {
            "borderRadius": undefined,
            "inset": "0px",
            "position": "absolute",
          }
        }
      >
        <div
          className="saturation-black"
          style={
            {
              "borderRadius": undefined,
              "boxShadow": undefined,
              "inset": "0px",
              "position": "absolute",
            }
          }
        />
        <div
          style={
            {
              "cursor": "default",
              "left": "66.66666666666667%",
              "position": "absolute",
              "top": "70%",
            }
          }
        >
          <div
            style={
              {
                "background": "hsl(250, 50%, 20%)",
                "border": "2px #fff solid",
                "borderRadius": "22px",
                "height": "20px",
                "transform": "translate(-12px, -13px)",
                "width": "20px",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <div
    style={
      {
        "margin": "auto",
        "width": "95%",
      }
    }
  >
    <div
      className="flexbox-fix"
      style={
        {
          "boxSizing": "border-box",
          "display": "flex",
          "height": "52px",
          "paddingTop": "22px",
        }
      }
    >
      <div
        style={
          {
            "height": "8px",
            "margin": "0px 16px 0px 16px",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <div
          style={
            {
              "borderRadius": "4px",
              "boxShadow": undefined,
              "inset": "0px",
              "position": "absolute",
            }
          }
        >
          <div
            className="hue-horizontal"
            onMouseDown={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              {
                "borderRadius": "4px",
                "height": "100%",
                "padding": "0 2px",
                "position": "relative",
              }
            }
          >
            <style>
              
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }

            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
          
            </style>
            <div
              style={
                {
                  "left": "69.44444444444443%",
                  "position": "absolute",
                  "top": undefined,
                }
              }
            >
              <div
                style={
                  {
                    "background": "hsl(250, 100%, 50%)",
                    "border": "2px white solid",
                    "borderRadius": "22px",
                    "height": "20px",
                    "transform": "translate(-10px, -7px)",
                    "width": "20px",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="flexbox-fix"
      style={
        {
          "display": "flex",
          "height": "100px",
          "marginTop": "4px",
        }
      }
    >
      <div
        style={
          {
            "width": "100%",
          }
        }
      >
        <div
          style={
            {
              "boxSizing": "border-box",
              "padding": "0px 4.4px",
            }
          }
        >
          <div
            style={
              {
                "position": "relative",
              }
            }
          >
            <input
              id="rc-editable-input-1"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              spellCheck="false"
              style={
                {
                  "border": "1px solid #dadce0",
                  "borderRadius": "5px",
                  "boxSizing": "border-box",
                  "fontFamily": "Roboto,Arial,sans-serif",
                  "fontSize": "11px",
                  "height": "38px",
                  "outline": "none",
                  "padding": "4px 10% 3px",
                  "textAlign": "center",
                  "textTransform": "lowercase",
                  "width": "100%",
                }
              }
              value="#22194D"
            />
            <label
              htmlFor="rc-editable-input-1"
              onMouseDown={[Function]}
              style={
                {
                  "background": "#fff",
                  "color": "#3c4043",
                  "cursor": undefined,
                  "fontFamily": "Roboto,Arial,sans-serif",
                  "fontSize": "12px",
                  "left": "0",
                  "marginLeft": "auto",
                  "marginRight": "auto",
                  "position": "absolute",
                  "right": "0",
                  "textAlign": "center",
                  "textTransform": "uppercase",
                  "top": "-6px",
                  "width": "35px",
                }
              }
            >
              hex
            </label>
          </div>
        </div>
        <div
          style={
            {
              "display": "flex",
              "justifyContent": "space-between",
              "paddingTop": "10px",
            }
          }
        >
          <div
            style={
              {
                "flexGrow": "1",
                "margin": "0px 4.4px",
              }
            }
          >
            <div
              style={
                {
                  "position": "relative",
                }
              }
            >
              <input
                id="rc-editable-input-2"
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                spellCheck="false"
                style={
                  {
                    "border": "1px solid #dadce0",
                    "borderRadius": "5px",
                    "boxSizing": "border-box",
                    "fontFamily": "Roboto,Arial,sans-serif",
                    "fontSize": "11px",
                    "height": "38px",
                    "outline": "none",
                    "paddingLeft": "10px",
                    "textTransform": "lowercase",
                    "width": "100%",
                  }
                }
                value="34, 25, 77"
              />
              <label
                htmlFor="rc-editable-input-2"
                onMouseDown={[Function]}
                style={
                  {
                    "background": "#fff",
                    "color": "#3c4043",
                    "cursor": undefined,
                    "fontFamily": "Roboto,Arial,sans-serif",
                    "fontSize": "12px",
                    "left": "10px",
                    "position": "absolute",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                    "top": "-6px",
                    "width": "32px",
                  }
                }
              >
                rgb
              </label>
            </div>
          </div>
          <div
            style={
              {
                "flexGrow": "1",
                "margin": "0px 4.4px",
              }
            }
          >
            <div
              style={
                {
                  "position": "relative",
                }
              }
            >
              <input
                id="rc-editable-input-3"
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                spellCheck="false"
                style={
                  {
                    "border": "1px solid #dadce0",
                    "borderRadius": "5px",
                    "boxSizing": "border-box",
                    "fontFamily": "Roboto,Arial,sans-serif",
                    "fontSize": "11px",
                    "height": "38px",
                    "outline": "none",
                    "paddingLeft": "10px",
                    "textTransform": "lowercase",
                    "width": "100%",
                  }
                }
                value="250°, 67%, 30%"
              />
              <label
                htmlFor="rc-editable-input-3"
                onMouseDown={[Function]}
                style={
                  {
                    "background": "#fff",
                    "color": "#3c4043",
                    "cursor": undefined,
                    "fontFamily": "Roboto,Arial,sans-serif",
                    "fontSize": "12px",
                    "left": "10px",
                    "position": "absolute",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                    "top": "-6px",
                    "width": "32px",
                  }
                }
              >
                hsv
              </label>
            </div>
          </div>
          <div
            style={
              {
                "flexGrow": "1",
                "margin": "0px 4.4px",
              }
            }
          >
            <div
              style={
                {
                  "position": "relative",
                }
              }
            >
              <input
                id="rc-editable-input-4"
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                spellCheck="false"
                style={
                  {
                    "border": "1px solid #dadce0",
                    "borderRadius": "5px",
                    "boxSizing": "border-box",
                    "fontFamily": "Roboto,Arial,sans-serif",
                    "fontSize": "11px",
                    "height": "38px",
                    "outline": "none",
                    "paddingLeft": "10px",
                    "textTransform": "lowercase",
                    "width": "100%",
                  }
                }
                value="250°, 50%, 20%"
              />
              <label
                htmlFor="rc-editable-input-4"
                onMouseDown={[Function]}
                style={
                  {
                    "background": "#fff",
                    "color": "#3c4043",
                    "cursor": undefined,
                    "fontFamily": "Roboto,Arial,sans-serif",
                    "fontSize": "12px",
                    "left": "10px",
                    "position": "absolute",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                    "top": "-6px",
                    "width": "32px",
                  }
                }
              >
                hsl
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GoogleFields renders correctly 1`] = `
<div
  className="flexbox-fix"
  style={
    {
      "display": "flex",
      "height": "100px",
      "marginTop": "4px",
    }
  }
>
  <div
    style={
      {
        "width": "100%",
      }
    }
  >
    <div
      style={
        {
          "boxSizing": "border-box",
          "padding": "0px 4.4px",
        }
      }
    >
      <div
        style={
          {
            "position": "relative",
          }
        }
      >
        <input
          id="rc-editable-input-9"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          spellCheck="false"
          style={
            {
              "border": "1px solid #dadce0",
              "borderRadius": "5px",
              "boxSizing": "border-box",
              "fontFamily": "Roboto,Arial,sans-serif",
              "fontSize": "11px",
              "height": "38px",
              "outline": "none",
              "padding": "4px 10% 3px",
              "textAlign": "center",
              "textTransform": "lowercase",
              "width": "100%",
            }
          }
          value="#FF0000"
        />
        <label
          htmlFor="rc-editable-input-9"
          onMouseDown={[Function]}
          style={
            {
              "background": "#fff",
              "color": "#3c4043",
              "cursor": undefined,
              "fontFamily": "Roboto,Arial,sans-serif",
              "fontSize": "12px",
              "left": "0",
              "marginLeft": "auto",
              "marginRight": "auto",
              "position": "absolute",
              "right": "0",
              "textAlign": "center",
              "textTransform": "uppercase",
              "top": "-6px",
              "width": "35px",
            }
          }
        >
          hex
        </label>
      </div>
    </div>
    <div
      style={
        {
          "display": "flex",
          "justifyContent": "space-between",
          "paddingTop": "10px",
        }
      }
    >
      <div
        style={
          {
            "flexGrow": "1",
            "margin": "0px 4.4px",
          }
        }
      >
        <div
          style={
            {
              "position": "relative",
            }
          }
        >
          <input
            id="rc-editable-input-10"
            onBlur={[Function]}
            onChange={[Function]}
            onKeyDown={[Function]}
            spellCheck="false"
            style={
              {
                "border": "1px solid #dadce0",
                "borderRadius": "5px",
                "boxSizing": "border-box",
                "fontFamily": "Roboto,Arial,sans-serif",
                "fontSize": "11px",
                "height": "38px",
                "outline": "none",
                "paddingLeft": "10px",
                "textTransform": "lowercase",
                "width": "100%",
              }
            }
            value="255, 0, 0"
          />
          <label
            htmlFor="rc-editable-input-10"
            onMouseDown={[Function]}
            style={
              {
                "background": "#fff",
                "color": "#3c4043",
                "cursor": undefined,
                "fontFamily": "Roboto,Arial,sans-serif",
                "fontSize": "12px",
                "left": "10px",
                "position": "absolute",
                "textAlign": "center",
                "textTransform": "uppercase",
                "top": "-6px",
                "width": "32px",
              }
            }
          >
            rgb
          </label>
        </div>
      </div>
      <div
        style={
          {
            "flexGrow": "1",
            "margin": "0px 4.4px",
          }
        }
      >
        <div
          style={
            {
              "position": "relative",
            }
          }
        >
          <input
            id="rc-editable-input-11"
            onBlur={[Function]}
            onChange={[Function]}
            onKeyDown={[Function]}
            spellCheck="false"
            style={
              {
                "border": "1px solid #dadce0",
                "borderRadius": "5px",
                "boxSizing": "border-box",
                "fontFamily": "Roboto,Arial,sans-serif",
                "fontSize": "11px",
                "height": "38px",
                "outline": "none",
                "paddingLeft": "10px",
                "textTransform": "lowercase",
                "width": "100%",
              }
            }
            value="0°, 100%, 100%"
          />
          <label
            htmlFor="rc-editable-input-11"
            onMouseDown={[Function]}
            style={
              {
                "background": "#fff",
                "color": "#3c4043",
                "cursor": undefined,
                "fontFamily": "Roboto,Arial,sans-serif",
                "fontSize": "12px",
                "left": "10px",
                "position": "absolute",
                "textAlign": "center",
                "textTransform": "uppercase",
                "top": "-6px",
                "width": "32px",
              }
            }
          >
            hsv
          </label>
        </div>
      </div>
      <div
        style={
          {
            "flexGrow": "1",
            "margin": "0px 4.4px",
          }
        }
      >
        <div
          style={
            {
              "position": "relative",
            }
          }
        >
          <input
            id="rc-editable-input-12"
            onBlur={[Function]}
            onChange={[Function]}
            onKeyDown={[Function]}
            spellCheck="false"
            style={
              {
                "border": "1px solid #dadce0",
                "borderRadius": "5px",
                "boxSizing": "border-box",
                "fontFamily": "Roboto,Arial,sans-serif",
                "fontSize": "11px",
                "height": "38px",
                "outline": "none",
                "paddingLeft": "10px",
                "textTransform": "lowercase",
                "width": "100%",
              }
            }
            value="0°, 100%, 50%"
          />
          <label
            htmlFor="rc-editable-input-12"
            onMouseDown={[Function]}
            style={
              {
                "background": "#fff",
                "color": "#3c4043",
                "cursor": undefined,
                "fontFamily": "Roboto,Arial,sans-serif",
                "fontSize": "12px",
                "left": "10px",
                "position": "absolute",
                "textAlign": "center",
                "textTransform": "uppercase",
                "top": "-6px",
                "width": "32px",
              }
            }
          >
            hsl
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GooglePointer renders correctly 1`] = `
<div
  style={
    {
      "background": "hsl(250, 100%, 50%)",
      "border": "2px white solid",
      "borderRadius": "22px",
      "height": "20px",
      "transform": "translate(-10px, -7px)",
      "width": "20px",
    }
  }
/>
`;

exports[`GooglePointerCircle renders correctly 1`] = `
<div
  style={
    {
      "background": "hsl(250, 50%, 20%)",
      "border": "2px #fff solid",
      "borderRadius": "22px",
      "height": "20px",
      "transform": "translate(-12px, -13px)",
      "width": "20px",
    }
  }
/>
`;
